Remove some uses of getMinimumIndexCompatibilityVersion